--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image:src" content="assets/images/index-meta.png">
   <meta property="og:image" content="assets/images/index-meta.png">
-  <meta name="twitter:title" content="CRISTOPHER INTRETERIMENTOS">
+  <meta name="twitter:title" content="CRISTOPHER ENTRETERIMENTOS">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/mbr-112x112.png" type="image/x-icon">
   <meta name="description" content="Lista Iptv atualizadas diariamente, fale com um consultor e faça um teste totalmente gratuito por até 3 horas.
 Fale comigo no whatsapp 22 997916589">
   
   
-  <title>CRISTOPHER INTRETERIMENTOS</title>
+  <title>CRISTOPHER ENTRETERIMENTOS</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
@@ -63,7 +63,7 @@ Fale comigo no whatsapp 22 997916589">
             <div class="col-12 col-lg-5">
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>A MELHOR QUALIDADE EM IMAGEM E SOM</strong></h1>
                 
-                <p class="mbr-text mbr-fonts-style display-7">A <strong>melhor lista IPTV </strong>do Brasil fale com um consultor e faça um teste de até 3 horas gratuitamente.<br><strong>Clique no Botão</strong> abaixa e fale conosco!</p>
+                <p class="mbr-text mbr-fonts-style display-7">A <strong>melhor lista IPTV </strong>do Brasil fale com um consultor e faça um teste de até 3 horas gratuitamente.<br><strong>Clique no Botão</strong> abaixo e fale conosco!</p>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="https://api.whatsapp.com/send?phone=5522997916589&text=Ola%2C%20quero%20ser%20cliente%20do%20CRISUH%20TV%20!!">TESTAR GRATIS AGORA POR 3 HORAS</a></div>
             </div>
         </div>
@@ -640,7 +640,7 @@ Fale comigo no whatsapp 22 997916589">
             
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/i" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Created with Mobirise - <a href="https://mobirise.site/k" style="color:#aaa;">Try here</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/p" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">How to make a site - <a href="https://mobirise.site/x" style="color:#aaa;">Go here</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
